Resolve `logo being stretched` in desktop view

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -166,6 +166,7 @@ body {
   }
   .navbar .logo {
     display: inline;
+    align-self: center;
   }
   .navbar .nav {
     display: block;
