--- a/src/styles/sass/layouts/_desktop.scss
+++ b/src/styles/sass/layouts/_desktop.scss
@@ -25,6 +25,7 @@
 
     .logo {
       display: inline ;
+      align-self: center;
     }
 
     .nav {
